[package]
name = "istring"
version = "0.1.0"
edition = "2021"

[dependencies]
left-right = "0.11.5"
once_cell = "1.19.0"
radix_trie = "0.2.1"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "istring-benches"
harness = false

[profile.release]
lto = "thin"
