[package]
name = "interned-string"
version = "0.3.0"
edition = "2021"
license = "MPL-2.0"
description = "High-performance and concurrent string interning for general purpose use."
repository = "https://github.com/drash-course/interned-string"
keywords = ["string", "interner", "caching"]

[dependencies]
left-right = "0.11.5"
lockfree = "0.5.1"
once_cell = "1.19.0"
radix_trie = "0.2.1"
serde = { version = "1.0", optional = true }

[features]
serde = ["dep:serde"]

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }
serde_json = "1.0"

[[bench]]
name = "istring-benches"
harness = false

[profile.release]
lto = "thin"
